--- a/ChangeLog
+++ b/ChangeLog
@@ -74,6 +74,7 @@
 * próba optymalizacji animowanych emotikonów - konkretna animacja/emotikon
   ³aduje siê z dysku tylko raz w ci±gu danej sesji kadu i jest dzielona
   miêdzy wszyskie te same emotikony we wszystkich oknach chat (adrian)
+* ograniczenie liczby jednocze¶nie akceptowanych po³±czeñ DCC do o¶miu (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
