- obsluga wznawiania zerwanych transmisji plikow poprzez DCC.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@966 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -75,6 +75,7 @@
   ³aduje siê z dysku tylko raz w ci±gu danej sesji kadu i jest dzielona
   miêdzy wszyskie te same emotikony we wszystkich oknach chat (adrian)
 * ograniczenie liczby jednocze¶nie akceptowanych po³±czeñ DCC do o¶miu (chilek)
+* obs³uga wznawiania zerwanych transmisji plików poprzez DCC (chilek)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
