--- a/ChangeLog
+++ b/ChangeLog
@@ -78,6 +78,9 @@
 * obs³uga wznawiania zerwanych transmisji plików poprzez DCC (chilek)
 * pierwsze przymiarki do zrobienia konfiguralnego panelu
   informacyjnego, na razie tylko pole w konfiguracji (mast3r)
+* mo¿liwo¶æ skonfigurowania panelu informacyjnego (mast3r)
+* mo¿liwo¶æ skonfigurowania tytu³u okna rozmowy i konferencji (mast3r)
+* w informacji o u¿ytkowniku pokazujemy port nawet gdy nie znamy ip (mast3r)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
