--- a/ChangeLog
+++ b/ChangeLog
@@ -81,6 +81,8 @@
 * mo¿liwo¶æ skonfigurowania panelu informacyjnego (mast3r)
 * mo¿liwo¶æ skonfigurowania tytu³u okna rozmowy i konferencji (mast3r)
 * w informacji o u¿ytkowniku pokazujemy port nawet gdy nie znamy ip (mast3r)
+* pocz±tki klasy MessageBox - z za³o¿enia lepszej i wygodniej od oryginalnej
+  QMessageBox. Mam parê pomys³ów. Bêdê j± rozbudowywa³ w miarê potrzeb (adrian)
 
 +++ wersja 0.3.3-final
 * ikonka wiadomo¶ci i ikon statusu "ukryty" z telefonikiem
