--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.4-pre2
+* graficzny instalator - instaluj.tcl (googie)
+
 +++ wersja 0.3.4-pre1
 * ¶rodkowy guzik myszki wci¶niêty na u¿ytkowniku
   otwiera okno wysy³ania smsa (chilek)
