poprawka, polskie znaczki juz dobrze się wyswietlają
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@988 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
+* poprawka, polskie literki powinny ju¿ siê wy¶wietlaæ poprawnie w
+  panelu infomacyjnym i tytule okna rozmowy, konferencji przy
+  wlasnej konfiguracji (mast3r)
 
 +++ wersja 0.3.4-pre1
 * ¶rodkowy guzik myszki wci¶niêty na u¿ytkowniku
