poprawka parsowani + inne
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@994 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 * rozbudowa klasy MessageBox o obs³ugê wska¼ników postêpu (adrian)
 * poprawki przy parsowaniu - mam nadzieje, ¿e teraz nie bedzie
   ju¿ problemów, dodanie debugu do kodu parsowania (mast3r)
+* poprawka: parsowanie powinno dzia³aæ juz poprawnie, poprawki
+  kosmetyczne w kodzie i w oknie konfiguracji "Wygl±d" (mast3r)
 
 +++ wersja 0.3.4-pre1
 * ¶rodkowy guzik myszki wci¶niêty na u¿ytkowniku
