--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
++++ wersja 0.3.4-pre3
+* dodane przeszukiwanie historii (chilek)
+
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
 * poprawka, polskie literki powinny ju¿ siê wy¶wietlaæ poprawnie w
