dodany pasek narzedziowy.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1004 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 * w oknie konfiguracji pola puste zamieniane s± na faktyczne
   domy¶lne ustawienia (mast3r)
 * optymalizacja kodu w/w (mast3r)
+* dodany pasek narzêdziowy (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
