--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
   domy¶lne ustawienia (mast3r)
 * optymalizacja kodu w/w (mast3r)
 * dodany pasek narzêdziowy (chilek)
+* zapamiêtywanie odebranych wiadomo¶ci przy ka¿dej operacji na li¶cie wiadomo¶ci
+  oczekuj±cych na odczytanie (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
