- pasek narzedziowy dokowalny, - guzik narzedziowy "dodaj uzytkownika".
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1009 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 * dodany pasek narzêdziowy (chilek)
 * zapamiêtywanie odebranych wiadomo¶ci przy ka¿dej operacji na li¶cie wiadomo¶ci
   oczekuj±cych na odczytanie (chilek)
+* pasek narzêdziowy dokowalny, guzik narzêdziowy "dodaj u¿ytkownika" (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
