--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,10 @@
 * zapamiêtywanie odebranych wiadomo¶ci przy ka¿dej operacji na li¶cie wiadomo¶ci
   oczekuj±cych na odczytanie (chilek)
 * pasek narzêdziowy dokowalny, guzik narzêdziowy "dodaj u¿ytkownika" (chilek)
-
+* pozadki w kodzie, zakomentowanie nieuzywanych zmiennych i
+  klasy Operation( nie uzywana od dluzszego czasu, moze czas
+  pozbyc sie jej i usunac network.cpp) (mast3r)
+  
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
 * poprawka, polskie literki powinny ju¿ siê wy¶wietlaæ poprawnie w
