--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,6 @@
-Autorzy Kadu:
 
-Tomasz Jarzynka <tomee (at) cpi (dot) pl>
-twórca projektu, programista, grafik
+ Autorzy Kadu - ludzie aktywnie i stale wpieraj±cy projekt
+===========================================================
 
 Tomasz Chiliñski <chilek (at) chilan (dot) com>
 programista, opiekun serwera kadu.net
@@ -14,3 +13,10 @@ programista
 
 Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
 dokumentacja projektu, aktualizacja wersji polskiej
+
+
+ Autorzy Kadu - ludzie nie wspieraj±cy ju¿ aktywnie projektu
+=============================================================
+
+Tomasz Jarzynka <tomee (at) cpi (dot) pl>
+twórca projektu, programista, grafik
