--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@
 * porzadki w kodzie, zakomentowanie nieuzywanych zmiennych i
   klasy Operation( nie uzywana od dluzszego czasu, moze czas
   pozbyc sie jej i usunac network.cpp) (mast3r)
-* funkcja MessageBox::msg(), usuniête network.cpp oraz
+* funkcja MessageBox::msg(), usuniête network.cpp i doc'e od libgadu oraz
   porz±dki w pliku AUTHORS (adrian)
   
 +++ wersja 0.3.4-pre2
