--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 * funkcja MessageBox::msg(), usuniête network.cpp i doc'e od libgadu oraz
   porz±dki w pliku AUTHORS (adrian)
 * mo¿na chowaæ pasek narzêdziowy (chilek)
+* zapamiêtywanie ustawieñ paska narzêdziowego (chilek)
   
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
