wszystkie adres IP sa przechowywane w obiektach klasy QHostAddress.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1022 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
   porz±dki w pliku AUTHORS (adrian)
 * mo¿na chowaæ pasek narzêdziowy (chilek)
 * zapamiêtywanie ustawieñ paska narzêdziowego (chilek)
+* wszystkie adresy IP przechowywane s± w obiektach klasy QHostAddress (chilek)
   
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
