--- a/ChangeLog
+++ b/ChangeLog
@@ -15,7 +15,9 @@
 * mo¿na chowaæ pasek narzêdziowy (chilek)
 * zapamiêtywanie ustawieñ paska narzêdziowego (chilek)
 * wszystkie adresy IP przechowywane s± w obiektach klasy QHostAddress (chilek)
-  
+* kadu po otrzymianiu pakietu GG_DISCONNECTING nie podejmuje kolejnych prób
+  ³±czenia siê z sieci± GG automatycznie (chilek)
+
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
 * poprawka, polskie literki powinny ju¿ siê wy¶wietlaæ poprawnie w
