w oknie informacji o uzytkowniku dodane pole z nazwa dnsowa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1032 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   teraz o po³owê mniejsze (mast3r/adrian)
 * wyrównane ikonki statusów (jz)
 * nowy "image" okna informacji o u¿ytkowniku (chilek)
+* w oknie informacji o u¿ytkowniku dodane pole z nazw± dnsow± (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
