program nie wywala sie, gdy zamykamy okno historii w trakcie jej przeszukiwania
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1033 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wyrównane ikonki statusów (jz)
 * nowy "image" okna informacji o u¿ytkowniku (chilek)
 * w oknie informacji o u¿ytkowniku dodane pole z nazw± dnsow± (chilek)
+* program nie wywala siê, gdy zamykamy okno historii w czasie jej przeszukiwania (jz/chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
