poprawki, revdns w parserze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1038 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   transmisji (jz/chilek)
 * obs³uga dns-lookupów w klasie UserList (chilek)
 * pozby³em siê segfaulta przy zamykaniu kadu? (chilek)
+* dodatkowa zmienna do parsowania %v - zwraca revdns gdy ip jest znane (mast3r)
+* poprawka:tytu³ okna rozmowy powinien wyswietlaæ siê poprawnie < i > (kiemlo/mast3r)
+* oczyszczenie kadu.h i kadu.cpp z smieci (mast3r)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
