--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * oczyszczenie kadu.h i kadu.cpp ze ¶mieci (mast3r)
 * udoskonalony autoaway - dodatkowo zliczaj±cy przerwania klawiatury i myszki
   na linuksie (chilek)
+* poprawka b³êdu w infopanelUpdate(uin_t) (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
