--- a/ChangeLog
+++ b/ChangeLog
@@ -40,6 +40,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * udoskonalony autoaway - dodatkowo zliczaj±cy przerwania klawiatury i myszki
   na linuksie (chilek)
 * poprawka b³êdu w infopanelUpdate(uin_t) (chilek)
+* okno konfiguracji: nowa zak³adka "Historia" (Ron_K/chilek)
+* mo¿liwo¶æ skonfigurowania okresu czasu z którego s± cytowane frazy
+  przy otwieraniu okna rozmowy (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
