pod *bsd powinno sie kompilowac
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1048 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przy otwieraniu okna rozmowy (chilek)
 * guzik "Konfiguracja" na pasku narzêdziowym (chilek)
 * okno historii: escape'owanie znaków < i > (chilek)
+* pod *bsd powinno sie ju¿ kompilowaæ (pawe³/mast3r)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
