--- a/TODO
+++ b/TODO
@@ -38,7 +38,7 @@
  ? ustawienie miejsca wyskakiwania hinta zamiast ko³o tray'a
  ? podrêczne menu w oknie rozmowy
  ? inteligentna data w oknie rozmowy
-
+ + zak³adki w oknie rozmowy (opcja)
  
  TODO dla wersji 0.4.0
 -----------------------
