zacząłem robić porządki w kodzie, sygnały od traya, nowa funkcja w klasie pending i przeróbki drobiazgów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1053 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -53,6 +53,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * pocz±tki gruntownych porz±dków w events.cpp/h - stworzenie klasy
   EventManager, sygna³y messageReceived, chatReceived, userlistReceived,
   userStatusChanged. Wiêcej porz±dków wkrótce (adrian)
+* oczyszczanie, porz±dki, optymalizacja kodu, poprawki starych funkcji,
+  krok ku przejsciu na sygna³'y (mast3r)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
