mozliwosc ustawienia w konfiguracji czy liczba kolumn w userbox'ie ma byc zmienna
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1055 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -56,6 +56,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * oczyszczanie, porz±dki, optymalizacja kodu, poprawki starych funkcji,
   krok ku przejsciu na sygna³'y (mast3r)
 * zmienna liczba kolumn w userbox'ie (chilek)
+* mo¿liwo¶æ ustawienia w konfiguracji czy liczba kolumn w userbox'ie
+  ma byæ zmienna (chilek)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
