zdarzenia do EventManager
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1057 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -58,6 +58,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmienna liczba kolumn w userbox'ie (chilek)
 * mo¿liwo¶æ ustawienia w konfiguracji czy liczba kolumn w userbox'ie
   ma byæ zmienna (chilek)
+* wiêkszo¶æ kodu dotycz±cego obs³ugi zdarzeñ sieciowych przeniesiona z
+  kadu.cpp/h do klasy EventManager. Tam nast±pi jego dalsze porz±dkowanie
+  i wydzielanie sygna³ów (adrian)
 
 +++ wersja 0.3.4-pre2
 * graficzny instalator - instaluj.tcl (googie)
