- nie mozna otwierac wielu okien konfiguracji, - zapamietywanie ostatnio wybranej zakladki z okna konfiguracji.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1060 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   i wydzielanie sygna³ów (adrian)
 * dalsze porz±dki w EventManager - wydzielenie sygna³ów connected,
   connectionFailed, disconnected i ackReceived (adrian)
+* nie mo¿na otwieraæ wielu okien konfiguracji (chilek)
+* zapamiêtywanie ostatnio wybranej zak³adki z okna konfiguracji (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
