--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodane do parsera %p - port (mast3r)
 * dalsze porz±dki w EventManager - wydzielenie sygna³ów
   connectionBroken, dccConnectionReceived, pubdirReplyReceived (adrian)
+* jeden, globalny obiekt config_file i pocz±tki nowego mechanizmu
+  budowania okna konfiguracyjnego (adrian)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
