open chat on message
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1067 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   connectionBroken, dccConnectionReceived, pubdirReplyReceived (adrian)
 * jeden, globalny obiekt config_file i pocz±tki nowego mechanizmu
   budowania okna konfiguracyjnego (adrian)
+* opcja automatycznego otwierania siê okna rozmowy,
+  gdy nadejdzie wiadomo¶æ (adrian)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
