formatowanie kolorkow i wygladu czcionki w wiadomosciach przychodzacych od uzytkownikow GG
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1070 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   budowania okna konfiguracyjnego (adrian)
 * opcja automatycznego otwierania siê okna rozmowy,
   gdy nadejdzie wiadomo¶æ (adrian)
+* formatowanie kolorków i wygl±du czcionki w wiadomo¶ciach przychodz±cych od
+  u¿ytkowników GG (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
