--- a/ChangeLog
+++ b/ChangeLog
@@ -20,7 +20,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   gdy nadejdzie wiadomo¶æ (adrian)
 * formatowanie kolorków i wygl±du czcionki w wiadomo¶ciach przychodz±cych od
   u¿ytkowników GG (chilek)
-
+* wywalenie z menu zdeaktywowanego "Wyslij wiadomosc" (mast3r)
+ 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
 * w oknie konfiguracji pola puste zamieniane s± na faktyczne
