mozemy formatowac swoje wiadomosci
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1081 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * formatowanie kolorków i wygl±du czcionki w wiadomo¶ciach przychodz±cych od
   u¿ytkowników GG (chilek)
 * wywalenie z menu zdeaktywowanego "Wyslij wiadomosc" (mast3r)
+* mo¿emy formatowaæ swoje wiadomo¶ci (chilek)
  
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
