--- a/ChangeLog
+++ b/ChangeLog
@@ -22,7 +22,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   u¿ytkowników GG (chilek)
 * wywalenie z menu zdeaktywowanego "Wyslij wiadomosc" (mast3r)
 * mo¿emy formatowaæ swoje wiadomo¶ci (chilek)
- 
+* po roz³±czeniu z serwerem GG opisy kontaktów s± kasowane (mast3r)
+* wywalenie snprintf - zamiast tego kdebug i drobne poprawki przy disconnect (mast3r)
+
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
 * w oknie konfiguracji pola puste zamieniane s± na faktyczne
