--- a/ChangeLog
+++ b/ChangeLog
@@ -24,6 +24,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿emy formatowaæ swoje wiadomo¶ci (chilek)
 * po roz³±czeniu z serwerem GG opisy kontaktów s± kasowane (mast3r)
 * wywalenie snprintf - zamiast tego kdebug i drobne poprawki przy disconnect (mast3r)
+* poprawka: CTRL + klik nie pokazuje/ukrywa okna Kadu, ani
+  nie pokazuje siê menu przy CTRL + prawy klik (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
