jesli nastapi blad polaczenia to kadu kolejny raz bedzie próbowac sie połączyc po 2 sekundach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1101 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -32,6 +32,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okno rozmowy: wstawienie emotki powoduje przesuniêcie kursora zaraz za ni± (chilek)
 * okno rozmowy: wstawienie znaku "-" nie powinno powodowaæ wstawiania nadinteligentnych
   znaków wyliczania (chilek)
+* je¶li nast±pi b³±d po³±czenia to kadu kolejny raz bêdzie próbowaæ siê po³±czyæ
+  po 2 sekundach (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
