--- a/TODO
+++ b/TODO
@@ -21,6 +21,7 @@
  + zmiany statusu u¿ytkowników pokazuj± siê w oknie rozmowy i historii (opcja)
  + okno rozmowy "wyp³ywa na wierzch" za ka¿d± now± wiadomo¶ci± (je¶li
    odpowiednia opcja w oknie rozmowy jest w³±czona)
+ ! wysylanie SMS'ow do ery
 
  TODO dla wersji 0.3.5 lub pó¼niejszych
 ----------------------------------------
