--- a/ChangeLog
+++ b/ChangeLog
@@ -37,6 +37,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodanie kodu selektora koloru, narazie jeszcze jest nie skoñczony i
   nie do konca sprawy, trzeba go jeszcze podpi±c, narazie guzik jest ukryty (mast3r)
 * zapomnia³em, ¿e doConnect() w AutoConnectTimer powinno byæ slotem (chilek)
+* okno rozmowy: mo¿liwo¶æ wybrania koloru tekstu (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
