poprawka, kadu nie wywala sie juz przy zamykaniu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1115 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   Przymiarki do nowej ERY (adrian)
 * okno rozmowy: ustawianie koloru z poza tablicy nie jest mo¿liwe (chilek)
 * roz³±czenie z serwerem GG zawsze powinno wy³±czaæ pingowanie serwera GG (chilek)
+* poprawka: Kadu z debugiem nie wywala siê przy zamykaniu (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
