--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okno rozmowy: ustawianie koloru z poza tablicy nie jest mo¿liwe (chilek)
 * roz³±czenie z serwerem GG zawsze powinno wy³±czaæ pingowanie serwera GG (chilek)
 * poprawka: Kadu z debugiem nie wywala siê przy zamykaniu (mast3r)
+* okno rozmowy: nie powinny siê ju¿ wy¶wietlaæ tagi font (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
