--- a/ChangeLog
+++ b/ChangeLog
@@ -47,6 +47,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * roz³±czenie z serwerem GG zawsze powinno wy³±czaæ pingowanie serwera GG (chilek)
 * poprawka: Kadu z debugiem nie wywala siê przy zamykaniu (mast3r)
 * okno rozmowy: nie powinny siê ju¿ wy¶wietlaæ tagi font (chilek)
+* uporz±dkowanie kodu zamykania Kadu i kilka kosmetycznych poprawek w debugu (mast3r)
+* poprawki: teraz naprawde juz nie powinno seg faultowaæ przy zamykaniu (mast3r)
+* ESC gdy wy³±czona jest ikonka w panelu dokuj±cym nic nie powoduje (mast3r)
+* przy zamykaniu Kadu przez np. KDE kadu powinno zapisaæ konfiguracje (mast3r)
+* wa¿na poprawka - Kadu wreszcie nie blokuje zamykania KDE !!! (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
