--- a/ChangeLog
+++ b/ChangeLog
@@ -59,6 +59,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ustawienia dla kazdej osoby innego pliku dzwiêkowego (mast3r)
 * dodanie katalogu debian/ w katalogu glownym programu, teraz kazdy
   bedzie mogl stworzyc wlasna paczke programu dla swojego Debian'a (mast3r)
+* Enter na klawiaturze alfanumerycznej te¿ wysy³a wiadomo¶æ (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
