a ten glupi seg fault
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1128 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -60,6 +60,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodanie katalogu debian/ w katalogu glownym programu, teraz kazdy
   bedzie mogl stworzyc wlasna paczke programu dla swojego Debian'a (mast3r)
 * Enter na klawiaturze alfanumerycznej te¿ wysy³a wiadomo¶æ (mast3r)
+* kolejne "pozbycie" sie seg faulta przy debugu (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
