--- a/ChangeLog
+++ b/ChangeLog
@@ -61,6 +61,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   bedzie mogl stworzyc wlasna paczke programu dla swojego Debian'a (mast3r)
 * Enter na klawiaturze alfanumerycznej te¿ wysy³a wiadomo¶æ (mast3r)
 * kolejne "pozbycie" sie seg faulta przy debugu (mast3r)
+* dodanie nowej funkcji do userlist, ktora przydaje sie w kilku miejscach (mast3r)
+* porz±dki w kodzie events.cpp i chat.cpp (mast3r)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
