--- a/ChangeLog
+++ b/ChangeLog
@@ -65,6 +65,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porz±dki w kodzie events.cpp i chat.cpp (mast3r)
 * status do autoconnecta jest statusem ostatnio ustawionym w Kadu (mast3r)
 * checkConnection i QTimer readevent - zakomentowane bo do niczego nie potrzebne (mast3r)
+* w oknie wyszukiwania pokazuj± siê statusy "ukryte" (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
