--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * checkConnection i QTimer readevent - zakomentowane bo do niczego nie potrzebne (mast3r)
 * w oknie wyszukiwania pokazuj± siê statusy "ukryte" (chilek)
 * wywalenie z kodu starej-niedzia³aj±cej metody wykrywania "ukrytych" (chilek)
+* rozwój nowego mechanizmu budowania okna konfiguracyjnego (adrian)
+* sms: obs³uga nowej bramki ery - na razie bardzo wolno dzia³a,
+  nie wiem jeszcze dlaczego (adrian)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
