- uzytkownicy blokowani przez nas wyswietlaja sie kolorem czerwonym, - uzytkownicy ignorowani przez nas kolorem zoltym.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1135 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -70,6 +70,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * rozwój nowego mechanizmu budowania okna konfiguracyjnego (adrian)
 * sms: obs³uga nowej bramki ery - na razie bardzo wolno dzia³a,
   nie wiem jeszcze dlaczego (adrian)
+* u¿ytkownicy blokowani przez nas wy¶wietlaj± siê kolorem czerwonym,
+  u¿ytkownicy ignorowani przez nas kolorem ¿ó³tym (chilek)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
