--- a/ChangeLog
+++ b/ChangeLog
@@ -72,6 +72,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   nie wiem jeszcze dlaczego (adrian)
 * u¿ytkownicy blokowani przez nas wy¶wietlaj± siê kolorem czerwonym,
   u¿ytkownicy ignorowani przez nas kolorem ¿ó³tym (chilek)
+* poczatki drag&drop - mozna przeciagac uzytkownikow z userbox'a.
+  narazie np do jakiegos edytora tekstowego (adrian)
 
 +++ wersja 0.3.4-pre3
 * dodane przeszukiwanie historii (chilek)
